progress on the first steps

--- a/notebooks/001_first_steps.ipynb
+++ b/notebooks/001_first_steps.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#First-steps\" data-toc-modified-id=\"First-steps-1\">First steps</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Creating-the-environment\" data-toc-modified-id=\"Creating-the-environment-1.2\">Creating the environment</a></span></li><li><span><a href=\"#Learning-to-use-the-environment\" data-toc-modified-id=\"Learning-to-use-the-environment-1.3\">Learning to use the environment</a></span></li><li><span><a href=\"#Playing-and-recording-the-games\" data-toc-modified-id=\"Playing-and-recording-the-games-1.4\">Playing and recording the games</a></span></li><li><span><a href=\"#Learning-from-recorded-games\" data-toc-modified-id=\"Learning-from-recorded-games-1.5\">Learning from recorded games</a></span></li><li><span><a href=\"#Visualizing-agent-play\" data-toc-modified-id=\"Visualizing-agent-play-1.6\">Visualizing agent play</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#First-steps\" data-toc-modified-id=\"First-steps-1\">First steps</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Creating-the-environment\" data-toc-modified-id=\"Creating-the-environment-1.2\">Creating the environment</a></span></li><li><span><a href=\"#Learning-to-use-the-environment\" data-toc-modified-id=\"Learning-to-use-the-environment-1.3\">Learning to use the environment</a></span></li><li><span><a href=\"#Playing-and-recording-the-games\" data-toc-modified-id=\"Playing-and-recording-the-games-1.4\">Playing and recording the games</a></span></li><li><span><a href=\"#Learning-from-recorded-games\" data-toc-modified-id=\"Learning-from-recorded-games-1.5\">Learning from recorded games</a></span><ul class=\"toc-item\"><li><span><a href=\"#Preparing-the-data\" data-toc-modified-id=\"Preparing-the-data-1.5.1\">Preparing the data</a></span></li><li><span><a href=\"#Creating-the-model\" data-toc-modified-id=\"Creating-the-model-1.5.2\">Creating the model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Problems-with-conda-environment\" data-toc-modified-id=\"Problems-with-conda-environment-1.5.2.1\">Problems with conda environment</a></span></li><li><span><a href=\"#Building-the-model\" data-toc-modified-id=\"Building-the-model-1.5.2.2\">Building the model</a></span></li></ul></li></ul></li><li><span><a href=\"#Visualizing-agent-play\" data-toc-modified-id=\"Visualizing-agent-play-1.6\">Visualizing agent play</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -46,8 +46,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T19:31:51.129753Z",
-     "start_time": "2019-07-16T19:31:50.322528Z"
+     "end_time": "2019-07-17T11:13:28.953207Z",
+     "start_time": "2019-07-17T11:13:27.750834Z"
     }
    },
    "outputs": [],
@@ -56,6 +56,8 @@
     "import cv2\n",
     "import numpy as np\n",
     "from tqdm import tqdm_notebook as tqdm\n",
+    "import glob\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "from animalai.envs import UnityEnvironment\n",
     "from animalai.envs.arena_config import ArenaConfig"
@@ -75,8 +77,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T19:31:55.230562Z",
-     "start_time": "2019-07-16T19:31:51.131431Z"
+     "end_time": "2019-07-17T11:13:32.841910Z",
+     "start_time": "2019-07-17T11:13:28.954729Z"
     },
     "hidden": true
    },
@@ -111,8 +113,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T19:31:56.037367Z",
-     "start_time": "2019-07-16T19:31:55.232116Z"
+     "end_time": "2019-07-17T11:13:33.672882Z",
+     "start_time": "2019-07-17T11:13:32.843848Z"
     },
     "hidden": true
    },
@@ -120,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "{'Learner': <animalai.envs.brain.BrainInfo at 0x7f4e36fb1160>}"
+       "{'Learner': <animalai.envs.brain.BrainInfo at 0x7fd4bed1cef0>}"
       ]
      },
      "execution_count": 3,
@@ -256,11 +258,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T19:32:00.249270Z",
-     "start_time": "2019-07-16T19:32:00.244790Z"
+     "end_time": "2019-07-17T11:13:33.678047Z",
+     "start_time": "2019-07-17T11:13:33.674327Z"
     },
     "hidden": true
    },
@@ -286,11 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T19:32:00.261544Z",
-     "start_time": "2019-07-16T19:32:00.251294Z"
+     "end_time": "2019-07-17T11:13:33.687644Z",
+     "start_time": "2019-07-17T11:13:33.679286Z"
     },
     "hidden": true
    },
@@ -411,6 +413,243 @@
     "I will process the pixels with a lenet-like network and finally use a perceptron to predict the probability over each action.\n",
     "\n",
     "For training I will leave some of the games out for validation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Preparing the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T11:13:33.740173Z",
+     "start_time": "2019-07-17T11:13:33.688809Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game_filepaths = sorted(glob.glob('/media/guillermo/Data/Kaggle/animalai/gameplay/1_food/*.npz'))\n",
+    "len(game_filepaths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T11:21:09.877587Z",
+     "start_time": "2019-07-17T11:21:09.870929Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "def load_games_data(game_filepaths):\n",
+    "    data = [np.load(game_filepath) for game_filepath in tqdm(game_filepaths, desc='Loading recorded games')]\n",
+    "    ohe = OneHotEncoder(categories=[range(3)], sparse=False)\n",
+    "    previous_action = np.concatenate([game['previous_action'] for game in data], axis=0)[:, 0]\n",
+    "    ohe.fit(previous_action[:, 1:2])\n",
+    "    previous_action = [ohe.transform(previous_action[:, 0:1]), ohe.transform(previous_action[:, 1:2])]\n",
+    "    previous_action = np.concatenate([np.zeros((2437, 3)), np.zeros((2437, 3))], axis=1)\n",
+    "    model_input = {\n",
+    "        'frame': np.concatenate([game['frame'] for game in data], axis=0),\n",
+    "        'speed': np.concatenate([game['speed'] for game in data], axis=0)[:, 0],\n",
+    "        'previous_action': previous_action,\n",
+    "    }\n",
+    "    action = np.concatenate([game['action'] for game in data], axis=0)\n",
+    "    model_output = {\n",
+    "        'action_move': ohe.transform(action[:, 0:1]),\n",
+    "        'action_rotate': ohe.transform(action[:, 1:2]),\n",
+    "    }\n",
+    "    return model_input, model_output, data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T11:23:27.640954Z",
+     "start_time": "2019-07-17T11:23:26.929427Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8e33a10c13b452da4b37ac92eb1a04a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Loading recorded games', max=53, style=ProgressStyle(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Inputs\n",
+      "frame shape: (2437, 84, 84, 3)\n",
+      "speed shape: (2437, 3)\n",
+      "previous_action shape: (2437, 6)\n",
+      "Outputs\n",
+      "action_move shape: (2437, 3)\n",
+      "action_rotate shape: (2437, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_input, model_output, data = load_games_data(game_filepaths)\n",
+    "input_keys = ['frame', 'speed', 'previous_action']\n",
+    "output_keys = ['action_move', 'action_rotate']\n",
+    "print('Inputs')\n",
+    "for key in input_keys:\n",
+    "    print('%s shape: %s' % (key, str(model_input[key].shape)))\n",
+    "print('Outputs')\n",
+    "for key in output_keys:\n",
+    "    print('%s shape: %s' % (key, str(model_output[key].shape)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T11:27:29.451684Z",
+     "start_time": "2019-07-17T11:27:28.744712Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9aa78afe55a5426b8c7165adec6a6397",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Loading recorded games', max=43, style=ProgressStyle(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e163804d62e04224b638fcabb512362a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Loading recorded games', max=10, style=ProgressStyle(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of train samples: 1957\n",
+      "Number of validation samples: 480\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = load_games_data(game_filepaths[:-10])\n",
+    "val = load_games_data(game_filepaths[-10:])\n",
+    "print('Number of train samples: %i' % len(train[0]['frame']))\n",
+    "print('Number of validation samples: %i' % len(val[0]['frame']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The idea is to process the frame using a lenet like network and merge it later with speed and previous move to take a decision over the actions.\n",
+    "\n",
+    "![](https://miro.medium.com/max/2625/1*1TI1aGBZ4dybR6__DI9dzA.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Problems with conda environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are inconsistencies between opencv, tensorflow-gpu and the environment requirements (numpy 1.14.5). Maybe I should create an environment for playing an another for training. However if I want to do reinforcement learning I need both in the environment.\n",
+    "\n",
+    "Which are my requirements:\n",
+    "* python 3.6, this is required by animalai\n",
+    "* opencv 4.1.0 or higher, previous versions do not show the window\n",
+    "* tensorflow-gpu, needed to train\n",
+    "* numpy 1.14.5, is this really necessary?\n",
+    "\n",
+    "I think the problem is that there are conflicts between them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ideas:\n",
+    "* I could try to create an environment from zero\n",
+    "* Why numpy 1.14.5 is needed?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Building the model"
    ]
   },
   {
