--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -2997,6 +2997,50 @@
     "filepaths = glob.glob('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_007/*.yaml')\n",
     "for filepath in filepaths:\n",
     "    add_blackouts(filepath, [-1, -2, -5, -10, -20])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Removing colors and changing time limit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-22T08:23:33.839514Z",
+     "start_time": "2019-09-22T08:23:33.825638Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def remove_colors_and_change_timelimit(filepath):\n",
+    "    arena_config = ArenaConfig(filepath)\n",
+    "    for arena in arena_config.arenas.values():\n",
+    "        arena.t = 500\n",
+    "        for item in arena.items:\n",
+    "            item.colors = []\n",
+    "    with open(filepath, 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-22T08:23:35.330737Z",
+     "start_time": "2019-09-22T08:23:34.638845Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "filepaths = glob.glob('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_008/*.yaml')\n",
+    "for filepath in filepaths:\n",
+    "    remove_colors_and_change_timelimit(filepath)"
    ]
   },
   {
