Started to implement geometric functions for the creation of arenas

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-21T14:06:16.086134Z",
-     "start_time": "2019-09-21T14:06:16.026709Z"
+     "end_time": "2019-09-24T04:34:59.240034Z",
+     "start_time": "2019-09-24T04:34:59.073070Z"
     }
    },
    "outputs": [],
@@ -51,7 +51,9 @@
     "import numpy as np\n",
     "import glob\n",
     "\n",
-    "from animalai.envs.arena_config import Vector3, RGB, Item, Arena, ArenaConfig"
+    "from animalai.envs.arena_config import Vector3, RGB, Item, Arena, ArenaConfig\n",
+    "\n",
+    "from orangutan.arenas.geometry import get_angle_looking_center, get_random_position"
    ]
   },
   {
@@ -277,7 +279,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Loading and modifying arenas"
    ]
@@ -289,7 +293,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T09:03:07.400707Z",
      "start_time": "2019-09-21T09:03:07.274707Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -303,7 +308,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T09:03:16.520666Z",
      "start_time": "2019-09-21T09:03:16.403276Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1611,7 +1617,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Let's add blackouts."
    ]
@@ -1623,7 +1631,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T09:04:31.279264Z",
      "start_time": "2019-09-21T09:04:31.275950Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1637,7 +1646,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T09:04:36.195554Z",
      "start_time": "2019-09-21T09:04:36.138446Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2959,7 +2969,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We could dump this to file and train using blackouts."
    ]
@@ -2971,7 +2983,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T14:08:32.835243Z",
      "start_time": "2019-09-21T14:08:32.820372Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2990,7 +3003,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T14:08:34.425279Z",
      "start_time": "2019-09-21T14:08:33.616782Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3001,7 +3015,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Removing colors and changing time limit"
    ]
@@ -3013,7 +3029,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-22T08:23:33.839514Z",
      "start_time": "2019-09-22T08:23:33.825638Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3034,13 +3051,96 @@
     "ExecuteTime": {
      "end_time": "2019-09-22T08:23:35.330737Z",
      "start_time": "2019-09-22T08:23:34.638845Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
     "filepaths = glob.glob('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_008/*.yaml')\n",
     "for filepath in filepaths:\n",
     "    remove_colors_and_change_timelimit(filepath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating first arenas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T04:35:30.212731Z",
+     "start_time": "2019-09-24T04:35:30.201751Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def _create_agent_looking_center():\n",
+    "    x, z = get_random_position()\n",
+    "    angle = get_angle_looking_center(x, z)\n",
+    "    agent = Item(name='Agent', positions=[Vector3(x, 0, z)], rotations=[angle])\n",
+    "    return agent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T04:15:28.112885Z",
+     "start_time": "2019-09-24T04:15:28.109538Z"
+    }
+   },
+   "source": [
+    "This angular things need testing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T04:35:49.108004Z",
+     "start_time": "2019-09-24T04:35:49.102696Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena = Arena(t=5000, items=[])\n",
+    "arena.items.append(_create_agent_looking_center())\n",
+    "arena_config = ArenaConfig()\n",
+    "arena_config.arenas[0] = arena\n",
+    "\n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/debug.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T04:12:42.449042Z",
+     "start_time": "2019-09-24T04:12:42.437158Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(1, 2, size=20)"
    ]
   },
   {
