--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -38,11 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T04:34:59.240034Z",
-     "start_time": "2019-09-24T04:34:59.073070Z"
+     "end_time": "2019-09-24T15:32:47.931306Z",
+     "start_time": "2019-09-24T15:32:47.909277Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Use this to reload changes in python scripts\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T16:16:47.688256Z",
+     "start_time": "2019-09-24T16:16:47.680100Z"
     }
    },
    "outputs": [],
@@ -53,19 +69,24 @@
     "\n",
     "from animalai.envs.arena_config import Vector3, RGB, Item, Arena, ArenaConfig\n",
     "\n",
-    "from orangutan.arenas.geometry import get_angle_looking_center, get_random_position"
+    "from orangutan.arenas.geometry import get_angle_looking_center, get_random_position, normalize_angle, get_position_in_front_of_agent\n",
+    "from orangutan.arenas.food import create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Arena"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The arena has three components:\n",
     "\n",
@@ -85,7 +106,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:42:03.741252Z",
      "start_time": "2019-09-21T08:42:03.738828Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -99,7 +121,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:46:50.495643Z",
      "start_time": "2019-09-21T08:46:50.492323Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -121,7 +144,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Items"
    ]
@@ -133,7 +158,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:49:27.221499Z",
      "start_time": "2019-09-21T08:49:27.214890Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -147,7 +173,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:49:27.563868Z",
      "start_time": "2019-09-21T08:49:27.561000Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -170,7 +197,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating a simple arena"
    ]
@@ -182,7 +211,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:50:26.806771Z",
      "start_time": "2019-09-21T08:50:26.803689Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -197,7 +227,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:50:27.539360Z",
      "start_time": "2019-09-21T08:50:27.537192Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -212,7 +243,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:55:05.537584Z",
      "start_time": "2019-09-21T08:55:05.534831Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -227,7 +259,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:55:09.714971Z",
      "start_time": "2019-09-21T08:55:09.711183Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -262,7 +295,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-21T08:55:16.387608Z",
      "start_time": "2019-09-21T08:55:16.383188Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -272,7 +306,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "I have tested the arena and there is a single goodgoal with random size and position. So this is the way to create arenas, we could also use this method to load and modify arenas, for example to add timeouts."
    ]
@@ -3070,11 +3106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T04:35:30.212731Z",
-     "start_time": "2019-09-24T04:35:30.201751Z"
+     "end_time": "2019-09-24T15:33:21.797300Z",
+     "start_time": "2019-09-24T15:33:21.789338Z"
     }
    },
    "outputs": [],
@@ -3083,7 +3119,25 @@
     "    x, z = get_random_position()\n",
     "    angle = get_angle_looking_center(x, z)\n",
     "    agent = Item(name='Agent', positions=[Vector3(x, 0, z)], rotations=[angle])\n",
-    "    return agent"
+    "    return agent, x, z, angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T15:45:46.532715Z",
+     "start_time": "2019-09-24T15:45:46.516551Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def _create_goal_in_front_of_agent(x, z, angle, goal_type='BadGoalBounce', min_distance=15, max_distance=20, size=-1):\n",
+    "    distance = np.random.randint(min_distance, max_distance)\n",
+    "    x, z = get_position_in_front_of_agent(x, z, angle, distance)\n",
+    "    goal = Item(name=goal_type, positions=[Vector3(x, 0, z)], sizes=[Vector3(-1, -1, -1)], rotations=[normalize_angle(angle+180)])\n",
+    "    return goal"
    ]
   },
   {
@@ -3099,18 +3153,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Agent looking center"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T04:35:49.108004Z",
-     "start_time": "2019-09-24T04:35:49.102696Z"
-    }
+     "end_time": "2019-09-24T15:34:56.804024Z",
+     "start_time": "2019-09-24T15:34:56.778025Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
     "arena = Arena(t=5000, items=[])\n",
-    "arena.items.append(_create_agent_looking_center())\n",
+    "arena.items.append(_create_agent_looking_center()[0])\n",
     "arena_config = ArenaConfig()\n",
     "arena_config.arenas[0] = arena\n",
     "\n",
@@ -3119,28 +3183,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Bad goal moving towards the agent"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T04:12:42.449042Z",
-     "start_time": "2019-09-24T04:12:42.437158Z"
+     "end_time": "2019-09-24T15:34:58.163223Z",
+     "start_time": "2019-09-24T15:34:58.145614Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "arena = Arena(t=5000, items=[])\n",
+    "agent, x, z, angle = _create_agent_looking_center()\n",
+    "\n",
+    "arena.items.append(agent)\n",
+    "arena.items.append(_create_bad_goal_moving_towards_agent(x, z, angle))\n",
+    "arena_config = ArenaConfig()\n",
+    "arena_config.arenas[0] = arena\n",
+    "\n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/debug.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Green and yellow goal in front of agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T15:46:08.363987Z",
+     "start_time": "2019-09-24T15:46:08.350419Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.random.randint(1, 2, size=20)"
+    "arena = Arena(t=5000, items=[])\n",
+    "agent, x, z, angle = _create_agent_looking_center()\n",
+    "\n",
+    "arena.items.append(agent)\n",
+    "arena.items.append(_create_goal_in_front_of_agent(x, z, angle + np.random.randint(-20, 21), goal_type='GoodGoalMulti', min_distance=5, max_distance=20))\n",
+    "arena.items.append(_create_goal_in_front_of_agent(x, z, angle + np.random.randint(-20, 21), goal_type='GoodGoal', min_distance=5, max_distance=20))\n",
+    "arena_config = ArenaConfig()\n",
+    "arena_config.arenas[0] = arena\n",
+    "\n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/debug.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating arenas for food category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T16:20:25.470723Z",
+     "start_time": "2019-09-24T16:20:25.170661Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx] = create_arena_with_green_and_yellow_goal_in_front_of_agent()\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/green_yellow.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T16:20:26.358236Z",
+     "start_time": "2019-09-24T16:20:26.087037Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx] = create_arena_with_red_goal_coming()\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/red_coming.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
    ]
   },
   {
