More trainings with just food

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -3255,27 +3255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T16:20:25.470723Z",
-     "start_time": "2019-09-24T16:20:25.170661Z"
+     "end_time": "2019-09-25T18:02:31.600754Z",
+     "start_time": "2019-09-25T18:02:31.286419Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(128):\n",
-    "    arena_config.arenas[idx] = create_arena_with_green_and_yellow_goal_in_front_of_agent()\n",
+    "    arena_config.arenas[idx] = create_arena_with_green_and_yellow_goal_in_front_of_agent(t=5000)\n",
     "    \n",
     "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/green_yellow.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
@@ -3283,18 +3274,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-25T04:40:29.506925Z",
-     "start_time": "2019-09-25T04:40:29.143542Z"
+     "end_time": "2019-09-25T18:02:32.606889Z",
+     "start_time": "2019-09-25T18:02:32.259508Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(128):\n",
-    "    arena_config.arenas[idx] = create_arena_with_red_goal_coming()\n",
+    "    arena_config.arenas[idx] = create_arena_with_red_goal_coming(t=5000)\n",
     "    \n",
     "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/red_coming.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
