Prepared new function for generating levels with walls

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T16:16:47.688256Z",
-     "start_time": "2019-09-24T16:16:47.680100Z"
+     "end_time": "2019-10-02T16:28:56.331834Z",
+     "start_time": "2019-10-02T16:28:56.280498Z"
     }
    },
    "outputs": [],
@@ -70,7 +70,7 @@
     "from animalai.envs.arena_config import Vector3, RGB, Item, Arena, ArenaConfig\n",
     "\n",
     "from orangutan.arenas.geometry import get_angle_looking_center, get_random_position, normalize_angle, get_position_in_front_of_agent\n",
-    "from orangutan.arenas.food import create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming"
+    "from orangutan.arenas.food import create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming, create_arena_with_red_wall"
    ]
   },
   {
@@ -3288,6 +3288,25 @@
     "    arena_config.arenas[idx] = create_arena_with_red_goal_coming(t=5000)\n",
     "    \n",
     "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/red_coming.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-02T16:49:48.217315Z",
+     "start_time": "2019-10-02T16:49:48.176963Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(1):\n",
+    "    arena_config.arenas[idx] = create_arena_with_red_wall(t=5000)\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/red_wall.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
    ]
   },
