Created new function for generating levels with red_house

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-02T16:28:56.331834Z",
-     "start_time": "2019-10-02T16:28:56.280498Z"
+     "end_time": "2019-10-02T17:08:02.575571Z",
+     "start_time": "2019-10-02T17:08:02.564412Z"
     }
    },
    "outputs": [],
@@ -70,7 +70,8 @@
     "from animalai.envs.arena_config import Vector3, RGB, Item, Arena, ArenaConfig\n",
     "\n",
     "from orangutan.arenas.geometry import get_angle_looking_center, get_random_position, normalize_angle, get_position_in_front_of_agent\n",
-    "from orangutan.arenas.food import create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming, create_arena_with_red_wall"
+    "from orangutan.arenas.food import create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming, create_arena_with_red_wall\n",
+    "from orangutan.arenas.food import create_arena_with_red_houses"
    ]
   },
   {
@@ -3293,20 +3294,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-02T16:49:48.217315Z",
-     "start_time": "2019-10-02T16:49:48.176963Z"
+     "end_time": "2019-10-02T16:51:12.065074Z",
+     "start_time": "2019-10-02T16:51:08.400788Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
-    "for idx in range(1):\n",
+    "for idx in range(128):\n",
     "    arena_config.arenas[idx] = create_arena_with_red_wall(t=5000)\n",
     "    \n",
     "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/red_wall.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-02T17:28:18.892705Z",
+     "start_time": "2019-10-02T17:28:11.022058Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx] = create_arena_with_red_houses(t=5000)\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/red_house.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
    ]
   },
