Created two new levels for preferences

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-02T17:08:02.575571Z",
-     "start_time": "2019-10-02T17:08:02.564412Z"
+     "end_time": "2019-10-04T17:14:59.283500Z",
+     "start_time": "2019-10-04T17:14:59.266335Z"
     }
    },
    "outputs": [],
@@ -71,7 +71,8 @@
     "\n",
     "from orangutan.arenas.geometry import get_angle_looking_center, get_random_position, normalize_angle, get_position_in_front_of_agent\n",
     "from orangutan.arenas.food import create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming, create_arena_with_red_wall\n",
-    "from orangutan.arenas.food import create_arena_with_red_houses"
+    "from orangutan.arenas.food import create_arena_with_red_houses\n",
+    "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent, create_arena_with_different_one_close_and_one_farther_goal_in_front_of_agent"
    ]
   },
   {
@@ -3100,7 +3101,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating first arenas"
    ]
@@ -3112,7 +3115,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-24T15:33:21.797300Z",
      "start_time": "2019-09-24T15:33:21.789338Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3130,7 +3134,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-24T15:45:46.532715Z",
      "start_time": "2019-09-24T15:45:46.516551Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3147,7 +3152,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-24T04:15:28.112885Z",
      "start_time": "2019-09-24T04:15:28.109538Z"
-    }
+    },
+    "hidden": true
    },
    "source": [
     "This angular things need testing."
@@ -3156,7 +3162,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Agent looking center"
@@ -3186,7 +3193,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Bad goal moving towards the agent"
@@ -3218,7 +3226,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Green and yellow goal in front of agent"
    ]
@@ -3230,7 +3241,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-24T15:46:08.363987Z",
      "start_time": "2019-09-24T15:46:08.350419Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3249,7 +3261,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating arenas for food category"
    ]
@@ -3261,7 +3275,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-27T04:37:18.710842Z",
      "start_time": "2019-09-27T04:37:18.346047Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3280,7 +3295,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-25T18:02:32.606889Z",
      "start_time": "2019-09-25T18:02:32.259508Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3299,7 +3315,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-02T16:51:12.065074Z",
      "start_time": "2019-10-02T16:51:08.400788Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3318,7 +3335,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-02T17:29:32.912430Z",
      "start_time": "2019-10-02T17:29:25.900733Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3327,6 +3345,51 @@
     "    arena_config.arenas[idx] = create_arena_with_red_houses(t=5000)\n",
     "    \n",
     "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/red_house.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating arenas for preferences category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-04T17:28:00.400841Z",
+     "start_time": "2019-10-04T17:28:00.005222Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx] = create_arena_with_different_sizes_green_goal_in_front_of_agent(t=5000)\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_preferences/green_sizes.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-04T17:27:11.134147Z",
+     "start_time": "2019-10-04T17:27:10.763932Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx] = create_arena_with_different_one_close_and_one_farther_goal_in_front_of_agent(t=5000)\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_preferences/green_distances.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
    ]
   },
